mednsktest changelog
====================


Unreleased
----------
+ Добавлены тест УЗД на декабрь 2018.
+ Команда 'start' теперь принимает опцию --save.
+ Переход на использование click.


v0.1.0
------
+ Basic functionality.