@@ -78,11 +78,13 @@ https://github.com/idlesign/mednsktest
 
 По умолчанию выдаются 50 вопросов, выбранных случаным образом из общего количества, в случайном порядке.
 
-Количество вопросов можно ограничить при помощи ключа ``--questions_limit``.
+Количество вопросов можно ограничить при помощи ключа ``--qlimit``.
 
-Помощь по ключам, которые принимает приложение, можно получить так::
+Поддерживаются  и другие ключи. Помощь по ключам, которые принимает приложение, можно получить так:
 
-    mednsktest --help
+.. code-block:: bash
+
+    $ mednsktest start --help
 
 
 
